Fixing visual bug on mobile device from map

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -150,9 +150,9 @@
     }
 
     .content-container {
-        min-height: 115vh !important;
+        min-height: 140vh !important;
         iframe {
-            min-height: 125vh !important;
+            min-height: 150vh !important;
         }
     }
 }
